save crendentials as basic auth

--- a/results/findings.html
+++ b/results/findings.html
@@ -24,241 +24,11 @@
         <div class="files--container">
             <h3>RCR CLI REPORT</h2>
                 <p>Instance :
-                    <a href="https://surfqa.service-now.com">https://surfqa.service-now.com</a>
+                    <a href="https://surfdev2.service-now.com">https://surfdev2.service-now.com</a>
                 </p>
-                <p>Report generated at : Thu Nov 30 2017 12:16:26 GMT+0530 (IST) </p>
-                <p>Executed by user : pradeep.gouribhatla</p>
-                <hr> 
-                <div class="file--container">
-                    <h6>File Name :
-                        <a href="https://surfqa.service-now.com/sys_script.do?sys_id=114dd292db22c740a0885e77dc96198f" target="_blank">
-                            LEG_CLM_auto incidents
-                        </a>
-                        [Business Rule]
-                    </h6>
- 
-                    <p>Error count: 1 </p>
-                    <p>Warning count: 0 </p>
-                    <p>File last modified by : vishnu.gangireddy</p>
-                    <table class="table table-hover table-inverse">
-                        <thead>
-                            <tr>
-                                <th>Line#</th>
-                                <th>Rule Id</th>
-                                <th>Message</th>
-                                <th>Developer</th>
-                                <th>Source</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="x--col-2">Line 32:2</td>
-                                <td class="x--col-2">_SNOW0011</td>
-                                <td class="x--col-3">Do not use current.update in before Business Rule</td>
-                                <td class="x--col-3">vishnu.gangireddy</td>
-                                <td class="x--col-5 code">
-                                    <span class="">
-                                        [31]: 	current.u_incident &#x3D; gr.number;
-                                    </span>
-                                    <br>                                     <span class="error">
-                                        [32]: 	current.update();
-                                    </span>
-                                    <br>                                     <span class="">
-                                        [33]: 
-                                    </span>
-                                    <br> 
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <div class="file--container">
-                    <h6>File Name :
-                        <a href="https://surfqa.service-now.com/sys_script.do?sys_id=14277c3613ece680a5e739fed144b09b" target="_blank">
-                            First Time Purchase Subscription LI
-                        </a>
-                        [Business Rule]
-                    </h6>
- 
-                    <p>Error count: 1 </p>
-                    <p>Warning count: 0 </p>
-                    <p>File last modified by : jitesh.malik</p>
-                    <table class="table table-hover table-inverse">
-                        <thead>
-                            <tr>
-                                <th>Line#</th>
-                                <th>Rule Id</th>
-                                <th>Message</th>
-                                <th>Developer</th>
-                                <th>Source</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="x--col-2">Line 4:2</td>
-                                <td class="x--col-2">_SNOW0005</td>
-                                <td class="x--col-3">Service Now Log : gs.log should not be used</td>
-                                <td class="x--col-3">jitesh.malik</td>
-                                <td class="x--col-5 code">
-                                    <span class="">
-                                        [3]: 	var previousQuote &#x3D; previous.u_quote;
-                                    </span>
-                                    <br>                                     <span class="error">
-                                        [4]: 	gs.log(&#x27;In First Time Purchase Subscription LI about to fire event&#x27;,&#x27;JM&#x27;);
-                                    </span>
-                                    <br>                                     <span class="">
-                                        [5]: 	
-                                    </span>
-                                    <br> 
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <div class="file--container">
-                    <h6>File Name :
-                        <a href="https://surfqa.service-now.com/sys_script.do?sys_id=ab7fc97bdb520780a0885e77dc9619f4" target="_blank">
-                            Communicate with IBM Watson
-                        </a>
-                        [Business Rule]
-                    </h6>
- 
-                    <p>Error count: 4 </p>
-                    <p>Warning count: 0 </p>
-                    <p>File last modified by : dawoodkhan.mohammed</p>
-                    <table class="table table-hover table-inverse">
-                        <thead>
-                            <tr>
-                                <th>Line#</th>
-                                <th>Rule Id</th>
-                                <th>Message</th>
-                                <th>Developer</th>
-                                <th>Source</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="x--col-2">Line 3:2</td>
-                                <td class="x--col-2">_SNOW0005</td>
-                                <td class="x--col-3">Service Now Log : gs.info should not be used</td>
-                                <td class="x--col-3">santosh.poreddy</td>
-                                <td class="x--col-5 code">
-                                    <span class="">
-                                        [2]: 
-                                    </span>
-                                    <br>                                     <span class="error">
-                                        [3]: 	gs.info(&quot;Start of the business rule Line 3 &#x3D; &quot; +current.u_message);
-                                    </span>
-                                    <br>                                     <span class="">
-                                        [4]: 
-                                    </span>
-                                    <br> 
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="x--col-2">Line 15:3</td>
-                                <td class="x--col-2">_SNOW0005</td>
-                                <td class="x--col-3">Service Now Log : gs.info should not be used</td>
-                                <td class="x--col-3">santosh.poreddy</td>
-                                <td class="x--col-5 code">
-                                    <span class="">
-                                        [14]: 		response &#x3D; api.send(current.u_message.toString());
-                                    </span>
-                                    <br>                                     <span class="error">
-                                        [15]: 		gs.info(&quot;Communicate with IBM Watson : Response &quot;+response.output,&quot;Watson&quot;);
-                                    </span>
-                                    <br>                                     <span class="">
-                                        [16]: 	}catch(e){
-                                    </span>
-                                    <br> 
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="x--col-2">Line 17:3</td>
-                                <td class="x--col-2">_SNOW0005</td>
-                                <td class="x--col-3">Service Now Log : gs.info should not be used</td>
-                                <td class="x--col-3">santosh.poreddy</td>
-                                <td class="x--col-5 code">
-                                    <span class="">
-                                        [16]: 	}catch(e){
-                                    </span>
-                                    <br>                                     <span class="error">
-                                        [17]: 		gs.info(&quot;Communicate with IBM Watson : error &quot; + e,&quot;Watson&quot;);
-                                    </span>
-                                    <br>                                     <span class="">
-                                        [18]: 	}
-                                    </span>
-                                    <br> 
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="x--col-2">Line 26:17</td>
-                                <td class="x--col-2">_SNOW0013</td>
-                                <td class="x--col-3"> don&#x27;t use sys_id in code</td>
-                                <td class="x--col-3">santosh.poreddy</td>
-                                <td class="x--col-5 code">
-                                    <span class="">
-                                        [25]: 	var gr &#x3D; new GlideRecord(&#x27;u_ibm_watson_chat_message&#x27;);
-                                    </span>
-                                    <br>                                     <span class="error">
-                                        [26]: 	var bot_user &#x3D; &#x27;39365c8adb568f00a3ab56a8dc961942&#x27;;
-                                    </span>
-                                    <br>                                     <span class="">
-                                        [27]: 
-                                    </span>
-                                    <br> 
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <div class="file--container">
-                    <h6>File Name :
-                        <a href="https://surfqa.service-now.com/sys_script.do?sys_id=aecc12f113edae00a5e739fed144b0b2" target="_blank">
-                            Update FTPSummary when quantity 0
-                        </a>
-                        [Business Rule]
-                    </h6>
- 
-                    <p>Error count: 1 </p>
-                    <p>Warning count: 0 </p>
-                    <p>File last modified by : jitesh.malik</p>
-                    <table class="table table-hover table-inverse">
-                        <thead>
-                            <tr>
-                                <th>Line#</th>
-                                <th>Rule Id</th>
-                                <th>Message</th>
-                                <th>Developer</th>
-                                <th>Source</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="x--col-2">Line 3:2</td>
-                                <td class="x--col-2">_SNOW0005</td>
-                                <td class="x--col-3">Service Now Log : gs.log should not be used</td>
-                                <td class="x--col-3">jitesh.malik</td>
-                                <td class="x--col-5 code">
-                                    <span class="">
-                                        [2]: 	//Minimum Deal Size: Delete the exisiting FTPS record on Line item when lines quantity becomes 0
-                                    </span>
-                                    <br>                                     <span class="error">
-                                        [3]: 	gs.log(&#x27;In Update FTPSummary when quantity 0&#x27;,&#x27;JM&#x27;);
-                                    </span>
-                                    <br>                                     <span class="">
-                                        [4]: 	var firstTimePurch &#x3D; new SSALineItemFlagFirstTimePurchase();
-                                    </span>
-                                    <br> 
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-        </div>
+                <p>Report generated at : Tue Dec 05 2017 15:12:01 GMT+0530 (IST) </p>
+                <p>Executed by user : </p>
+                <hr>         </div>
     </div>
 
     <div class="row"></div>
